fix(security): re-arm the workspace sandbox and close the terminal allowlist
Three independent holes let an agent run act outside the folder it was
given. Each one alone was survivable; together they let a Cowork task
write into the Avento source tree.

WorkspaceAccessService
- requireAuthorized returned the workspace root when the path fell
  outside it, instead of throwing. delete_directory("/anything") got the
  root back and deleted the project.
- The authorization check also accepted PARENT directories of a
  registered root (root.startsWith(target)), so /Users and / passed.
- Root iteration order was non-deterministic with several roots
  registered, so the same path could resolve differently between runs.
- "/workspace/src/App.tsx" collapsed to the root itself; the subpath was
  dropped, so writes landed in the wrong file.

McpController
- git/curl/mvn/docker were matched by PREFIX, so "git difftool
  --extcmd=/bin/sh" passed as "git ". Matching is now by exact
  subcommand, with the flags that execute arbitrary commands rejected
  (--extcmd, --upload-pack, -c, --ext-diff).
- curl accepted -o/-T/-d @file, giving arbitrary local write and
  exfiltration of local files. Only plain http(s) reads remain.
- cat/ls accepted absolute and ~ paths; they are now confined to the
  workspace.
- Shell metacharacters are rejected outright: the command runs without a
  shell, so "|" or "&&" means the model believes it is in one and the
  request is not what it thinks it is.

AgentRunWorker
- The worker passed the task folders into the prompt but never called
  registerWorkspaceRoot, so every file and terminal tool failed with
  SecurityException. The chat flow registered them; the worker did not.
- With no folder configured it fell back to the process working
  directory, which is the Avento source tree. A scheduled task now fails
  with an actionable message instead.
- Scheduled tasks require a folder; a plain chat with no project
  connected is a normal case and runs with